[package]
name = "published"
version = "1.1.0"
edition = "2024"
description = "App store name availability checker"
license = "MIT"
repository = "https://github.com/bradleydwyer/published"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
